k8s/frontend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  namespace: chat-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend-container
        image: suraim001/chatapp-frontend:latest
        ports:
        - containerPort: 80
        
#        env:
#        - name: NODE_ENV
#          value: "production"

#        resources:
#          requests:
#            cpu: "100m"
#            memory: "128Mi"
#          limits:
#            cpu: "500m"
#            memory: "512Mi"
